Modified mobile padding and margins. Fixed alignment for closing button on mobile majors cards.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17840,7 +17840,7 @@ button.bg-dark:focus {
   margin-right: 1rem !important;
 }
 
-.mb-3, .CSUDataImgBanner__dataTitle,
+.mb-3,
 .my-3 {
   margin-bottom: 1rem !important;
 }
@@ -17864,7 +17864,7 @@ button.bg-dark:focus {
   margin-right: 1.5rem !important;
 }
 
-.mb-4, .csu-card__form,
+.mb-4,
 .my-4 {
   margin-bottom: 1.5rem !important;
 }
@@ -18011,8 +18011,7 @@ button.bg-dark:focus {
 }
 
 .pt-4,
-.py-4,
-.csu-card__form {
+.py-4 {
   padding-top: 1.5rem !important;
 }
 
@@ -18022,8 +18021,7 @@ button.bg-dark:focus {
 }
 
 .pb-4,
-.py-4,
-.csu-card__form {
+.py-4 {
   padding-bottom: 1.5rem !important;
 }
 
@@ -19360,13 +19358,37 @@ html {
 
 .csu-card {
   min-height: 95%;
-  padding: 2rem;
+  padding: 2%;
   margin-bottom: 13px;
 }
 
 @media screen and (max-width: 767px) {
   .csu-card {
     min-height: unset;
+    padding: 0;
+  }
+  .csu-card .industry-title {
+    font-size: 1.3rem;
+    padding-bottom: .5rem;
+  }
+  .csu-card .majors-header {
+    color: #595959;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+}
+
+@media screen and (max-width: 767px) and (max-width: 767px) {
+  .csu-card .majors-header {
+    padding-top: 3rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .csu-card .csu-card__form-sizing .btn {
+    height: 2.5em;
   }
 }
 
@@ -19376,7 +19398,7 @@ html {
   border: #fff 2px solid;
   color: #fff;
   border-radius: 7px;
-  padding: 1px 7px;
+  padding: 0 .3rem;
   margin: 0 0 7px 0;
   font-weight: bold;
   top: -8px;
@@ -19902,7 +19924,7 @@ figcaption {
 
 @media screen and (max-width: 768px) {
   .CSUDataImgBanner {
-    height: unset;
+    height: 19rem;
   }
 }
 
@@ -19913,11 +19935,26 @@ figcaption {
   margin-bottom: 4px;
 }
 
+@media screen and (max-width: 767px) {
+  .CSUDataImgBanner__campusTitle {
+    font-size: 1.5rem;
+    line-height: 1.2;
+    padding-top: .5em;
+    padding-bottom: .1em;
+  }
+}
+
 .CSUDataImgBanner__changeCampus {
   font-size: 1rem;
   font-weight: 400;
   color: #FFF;
   opacity: 0.8;
+}
+
+@media screen and (max-width: 767px) {
+  .CSUDataImgBanner__changeCampus button.btn-change-campus {
+    font-size: 1rem;
+  }
 }
 
 .CSUDataImgBanner__changeCampus:hover {
@@ -19931,12 +19968,27 @@ figcaption {
   font-size: 1.8rem;
   font-weight: 700;
   border-bottom: 0.2rem #2BAE67 solid;
+  margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 767px) {
+  .CSUDataImgBanner__dataTitle span {
+    font-size: 1.2rem;
+    margin-bottom: 0;
+  }
 }
 
 .CSUDataImgBanner__dataCopy {
   font-weight: 500;
   font-size: 1.1rem;
   line-height: 1.6rem;
+}
+
+@media screen and (max-width: 767px) {
+  .CSUDataImgBanner__dataCopy {
+    font-size: 1rem;
+    line-height: 1.3;
+  }
 }
 
 .landing-page-carousel {
@@ -21066,6 +21118,13 @@ textarea {
   right: -15px;
 }
 
+@media screen and (max-width: 767px) {
+  .btn-remove {
+    top: -9px;
+    right: 1px;
+  }
+}
+
 .btn-reset {
   z-index: 2;
   position: relative;
@@ -21076,6 +21135,13 @@ textarea {
   cursor: pointer;
   vertical-align: middle;
   display: inline;
+}
+
+@media screen and (max-width: 767px) {
+  .btn-reset {
+    top: -9px;
+    left: -14px;
+  }
 }
 
 .major-tool-btn-mobile {
@@ -21358,7 +21424,13 @@ button.btn-change-campus:hover {
 
 .industry-card {
   min-height: 95%;
-  padding: 2rem;
+  padding: 2%;
+}
+
+@media screen and (max-width: 767px) {
+  .industry-card {
+    margin-top: 2%;
+  }
 }
 
 .pfre-bar {
@@ -21404,7 +21476,7 @@ button.btn-change-campus:hover {
   font-size: 0.857rem;
   float: left;
   margin-left: 10px;
-  padding-top: 1rem !important;
+  padding-top: 0;
 }
 
 .legend-mobile p {
